--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,55 +10,49 @@
   publisher={Courier Corporation,}
 }
 
-@article{einstein1950meaning,
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{marwah2017attentive,
+  title={Attentive semantic video generation using captions},
+  author={Marwah, Tanya and Mittal, Gaurav and Balasubramanian, Vineeth N},
+  booktitle={Computer Vision (ICCV), 2017 IEEE International Conference on},
+  pages={1435--1443},
+  year={2017},
+  organization={IEEE}
 }
 
-@article{PhysRev.47.777,
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777}
+@inproceedings{mittal2017sync,
+  title={Sync-DRAW: Automatic Video Generation using Deep Recurrent Attentive Architectures},
+  author={Mittal, Gaurav and Marwah, Tanya and Balasubramanian, Vineeth N},
+  booktitle={Proceedings of the 2017 ACM on Multimedia Conference},
+  pages={1096--1104},
+  year={2017},
+  organization={ACM}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{kumar2018sentiment,
+  title={Sentiment dynamics in social media news channels},
+  author={Kumar, Nagendra and Nagalla, Rakshita and Marwah, Tanya and Singh, Manish},
+  journal={Online Social Networks and Media},
+  volume={8},
+  pages={42--54},
+  year={2018},
+  publisher={Elsevier}
 }
 
-@article{einstein1905movement,
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@incollection{akilesh2017relevance,
+  title={On the Relevance of Very Deep Networks for Diabetic Retinopathy Diagnostics},
+  author={Akilesh, B and Marwah, Tanya and Balasubramanian, Vineeth N and Rajamani, Kumar},
+  booktitle={Applications of Cognitive Computing Systems and IBM Watson},
+  pages={47--54},
+  year={2017},
+  publisher={Springer}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{mittal2016sync,
+  title={Sync-DRAW: Automatic GIF Generation using Deep Recurrent Attentive Architectures},
+  author={Mittal, Gaurav and Marwah, Tanya and Balasubramanian, Vineeth N},
+  journal={arXiv},
+  pages={1--9},
+  year={2016},
+  publisher={Cornell University Library}
 }
+
